# azure-databricks-sdk-python

./: .coveragerc  .gitignore  HISTORY.md  LICENSE  README.md  requirements-test.txt  requirements.txt  setup.cfg
.github/workflows/: codeql-analysis.yml  coverage.yml  linting.yml  publish.yml
azure_databricks_sdk_python/: __init__.py  api.py  client.py  clusters.py  exceptions.py  secrets.py  tokens.py  types.py
azure_databricks_sdk_python/types/: __init__.py  auth_methods.py  clusters.py  libraries.py  secrets.py  tokens.py  versions.py
azure_databricks_sdk_python/types/tokens/: __init__.py  public_token_info.py  public_token_infos.py
docs/: requirements-docs.txt
docs/source/: README.md  api.rst  conf.py  index.rst  updates.rst
docs/source/_static/: custom.css
docs/source/_templates/: hacks.html  sidebar.html
docs/source/user/: advanced.rst  install.rst  quickstart.rst
tests/: helpers.py  test_api.py  test_client.py  test_clusters.py  test_scopes.py  test_tokens.py
