[metadata]
name = azure-databricks-sdk-python
author = Amine Kaabachi
author-email = ping@kaabachi.io
maintainer = Amine Kaabachi
maintainer-email = ping@kaabachi.io

summary = This is an unofficial Databricks SDK for python. It supports the operations provided by the Databricks REST API 2.0.
description-file = README.md
description-content-type = text/markdown
home-page = http://github.com/aminekaabachi/azure-databricks-sdk-python

license = MIT
classifier =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6

keywords = azure,databricks

[files]
packages =
    azure_databricks_sdk_python

